--- a/index.html
+++ b/index.html
@@ -11,30 +11,65 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
-            <img src="background.png" class="background" draggable="false">
-            <div class="titlelogo">
-                <img src="Logo.png" draggable="false">
-            </div>
-            <img src="ground.png" class="foreground" draggable="false">
-        </header>
-        <img src="forground.png" class="ground" draggable="false">
-        <section id="welcome">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil consectetur
-                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto deleniti
-                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt suscipit
-                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit sunt
-                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim incidunt
-                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid, temporibus sint,
-                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae nulla
-                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis dolorem
-                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt necessitatibus
-                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus officiis
-                neque nulla totam ab voluptatem, sit accusantium,</p>
-        </section>
+    <div class="navbar">
+        <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
+        <a href="#stuff"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
     </div>
-
-    
+    <div class="titlelogo">
+        <img src="Logo.png" draggable="false">
+    </div>
+    <section id="title">
+        <img src="background.png" class="background" draggable="false">
+        
+        <img src="ground.png" class="foreground" draggable="false">
+    </section>
+    <img src="forground.png" class="ground" draggable="false">
+    <section id="about">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+            consectetur
+            ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+            deleniti
+            cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+            suscipit
+            numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+            sunt
+            corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+            incidunt
+            illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+            temporibus sint,
+            molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+            nulla
+            adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+            dolorem
+            eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+            necessitatibus
+            illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+            officiis
+            neque nulla totam ab voluptatem, sit accusantium,</p>
+    </section>
+    <section id="stuff">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+            consectetur
+            ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+            deleniti
+            cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+            suscipit
+            numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+            sunt
+            corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+            incidunt
+            illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+            temporibus sint,
+            molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+            nulla
+            adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+            dolorem
+            eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+            necessitatibus
+            illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+            officiis
+            neque nulla totam ab voluptatem, sit accusantium,</p>
+    </section>
 </body>
+
 </html>
