--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +10,7 @@
 </head>
 
 <body>
+    <div id="navbarHitBox" style="position:absolute; top:100vh;"></div>
     <div class="navbar">
         <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
         <a href="#stuff"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
@@ -24,52 +24,104 @@
         <img src="ground.png" class="foreground" draggable="false">
     </section>
     <img src="forground.png" class="ground" draggable="false">
-    <section id="about">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
-            consectetur
-            ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
-            deleniti
-            cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
-            suscipit
-            numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
-            sunt
-            corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
-            incidunt
-            illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-            temporibus sint,
-            molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
-            nulla
-            adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
-            dolorem
-            eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-            necessitatibus
-            illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
-            officiis
-            neque nulla totam ab voluptatem, sit accusantium,</p>
-    </section>
-    <section id="stuff">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
-            consectetur
-            ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
-            deleniti
-            cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
-            suscipit
-            numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
-            sunt
-            corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
-            incidunt
-            illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-            temporibus sint,
-            molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
-            nulla
-            adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
-            dolorem
-            eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-            necessitatibus
-            illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
-            officiis
-            neque nulla totam ab voluptatem, sit accusantium,</p>
+    
+    <section id="everything" style="position: relative; top: .05px;">
+        <section id="about">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+                consectetur
+                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+                deleniti
+                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+                suscipit
+                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+                sunt
+                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+                incidunt
+                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+                temporibus sint,
+                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+                nulla
+                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+                dolorem
+                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+                necessitatibus
+                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+                officiis
+                neque nulla totam ab voluptatem, sit accusantium,</p>
+        </section>
+        <section id="stuff">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+                consectetur
+                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+                deleniti
+                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+                suscipit
+                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+                sunt
+                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+                incidunt
+                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+                temporibus sint,
+                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+                nulla
+                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+                dolorem
+                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+                necessitatibus
+                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+                officiis
+                neque nulla totam ab voluptatem, sit accusantium,</p>
+        </section>
+        <section id="stuff">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+                consectetur
+                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+                deleniti
+                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+                suscipit
+                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+                sunt
+                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+                incidunt
+                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+                temporibus sint,
+                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+                nulla
+                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+                dolorem
+                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+                necessitatibus
+                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+                officiis
+                neque nulla totam ab voluptatem, sit accusantium,</p>
+        </section>
+        <section id="stuff">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+                consectetur
+                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+                deleniti
+                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+                suscipit
+                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+                sunt
+                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+                incidunt
+                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+                temporibus sint,
+                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+                nulla
+                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+                dolorem
+                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+                necessitatibus
+                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+                officiis
+                neque nulla totam ab voluptatem, sit accusantium,</p>
+        </section>
     </section>
 </body>
+
+<script src="index.js"></script>
+
 
 </html>
