--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
+    <a class="backToTopBtn" href="#title"><img src="backtotopBtn.png"></a>
     <div id="navbarHitBox" style="position:absolute; top:100vh;"></div>
     <div class="navbar">
-        <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
-        <a href="#stuff"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
+        <div class="navbarBack">
+            <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
+            <a href="#stuff"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
+        </div>
     </div>
     <div class="titlelogo">
         <img src="Logo.png" draggable="false">
@@ -47,7 +50,7 @@
                 necessitatibus
                 illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
                 officiis
-                neque nulla totam ab voluptatem, sit accusantium,</p>
+                neque nulla totam ab voluptatem, sit accusantium, lorem</p>
         </section>
         <section id="stuff">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
