--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-    <a class="backToTopBtn" href="#title"><img src="backtotopBtn.png"></a>
+<body onscroll="myFunction()">
     <div id="navbarHitBox" style="position:absolute; top:100vh;"></div>
     <div class="navbar">
         <div class="navbarBack">
             <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
             <a href="#stuff"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
         </div>
+        <a class="backToTopBtn" href="#title"><img src="backtotopBtnInact.png" onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></a>
     </div>
     <div class="titlelogo">
         <img src="Logo.png" draggable="false">
@@ -52,74 +52,76 @@
                 officiis
                 neque nulla totam ab voluptatem, sit accusantium, lorem</p>
         </section>
-        <section id="stuff">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
-                consectetur
-                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
-                deleniti
-                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
-                suscipit
-                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
-                sunt
-                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
-                incidunt
-                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-                temporibus sint,
-                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
-                nulla
-                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
-                dolorem
-                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-                necessitatibus
-                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
-                officiis
-                neque nulla totam ab voluptatem, sit accusantium,</p>
-        </section>
-        <section id="stuff">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
-                consectetur
-                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
-                deleniti
-                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
-                suscipit
-                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
-                sunt
-                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
-                incidunt
-                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-                temporibus sint,
-                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
-                nulla
-                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
-                dolorem
-                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-                necessitatibus
-                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
-                officiis
-                neque nulla totam ab voluptatem, sit accusantium,</p>
-        </section>
-        <section id="stuff">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
-                consectetur
-                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
-                deleniti
-                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
-                suscipit
-                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
-                sunt
-                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
-                incidunt
-                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-                temporibus sint,
-                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
-                nulla
-                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
-                dolorem
-                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-                necessitatibus
-                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
-                officiis
-                neque nulla totam ab voluptatem, sit accusantium,</p>
+        <section id="everythingwithin">
+            <section id="stuff">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+                    consectetur
+                    ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+                    deleniti
+                    cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+                    suscipit
+                    numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+                    sunt
+                    corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+                    incidunt
+                    illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+                    temporibus sint,
+                    molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+                    nulla
+                    adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+                    dolorem
+                    eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+                    necessitatibus
+                    illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+                    officiis
+                    neque nulla totam ab voluptatem, sit accusantium,</p>
+            </section>
+            <section id="stuff">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+                    consectetur
+                    ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+                    deleniti
+                    cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+                    suscipit
+                    numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+                    sunt
+                    corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+                    incidunt
+                    illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+                    temporibus sint,
+                    molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+                    nulla
+                    adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+                    dolorem
+                    eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+                    necessitatibus
+                    illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+                    officiis
+                    neque nulla totam ab voluptatem, sit accusantium,</p>
+            </section>
+            <section id="stuff">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
+                    consectetur
+                    ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
+                    deleniti
+                    cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
+                    suscipit
+                    numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
+                    sunt
+                    corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
+                    incidunt
+                    illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
+                    temporibus sint,
+                    molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
+                    nulla
+                    adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
+                    dolorem
+                    eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
+                    necessitatibus
+                    illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
+                    officiis
+                    neque nulla totam ab voluptatem, sit accusantium,</p>
+            </section>
         </section>
     </section>
 </body>
