--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="navbarBack">
             <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
             <a href="#stuff"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
+            <a href="#projects"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
+            <a href="#socials"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
         </div>
         <a class="backToTopBtn" href="#title"><img src="backtotopBtnInact.png" onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></a>
     </div>
@@ -76,7 +78,7 @@
                     officiis
                     neque nulla totam ab voluptatem, sit accusantium,</p>
             </section>
-            <section id="stuff">
+            <section id="projects" class="general">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
                     consectetur
                     ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
@@ -99,7 +101,7 @@
                     officiis
                     neque nulla totam ab voluptatem, sit accusantium,</p>
             </section>
-            <section id="stuff">
+            <section id="socials" class="general">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
                     consectetur
                     ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
