--- a/index.html
+++ b/index.html
@@ -32,27 +32,10 @@
     
     <section id="everything" style="position: relative; top: .05px;">
         <section id="about">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus nihil
-                consectetur
-                ad voluptatem aliquid suscipit tempore placeat ipsum, vitae quisquam, vel, officia perspiciatis iusto
-                deleniti
-                cumque. Laboriosam omnis voluptas perspiciatis tempore sunt ipsum excepturi dolores, aliquid nesciunt
-                suscipit
-                numquam repudiandae quisquam, nulla enim recusandae architecto odit! Asperiores necessitatibus velit
-                sunt
-                corporis voluptas aliquam porro id dolore labore molestias veniam expedita doloremque molestiae enim
-                incidunt
-                illum facilis nobis, repellat voluptatum? Impedit numquam doloremque quasi aspernatur aliquid,
-                temporibus sint,
-                molestias provident cupiditate magni soluta corporis cum, laboriosam deleniti. Odit numquam recusandae
-                nulla
-                adipisci, delectus repellat ad autem eaque ex modi fuga saepe qui earum consequuntur ipsam officiis
-                dolorem
-                eveniet! Porro harum voluptatum, deserunt ipsa magni praesentium natus minus, expedita nesciunt
-                necessitatibus
-                illum quae reprehenderit in cum laudantium soluta provident! Repellendus, ex esse. Rem dicta doloribus
-                officiis
-                neque nulla totam ab voluptatem, sit accusantium, lorem</p>
+            <div style="margin: 0px; display: flex; position: absolute; justify-content: center; align-content: center; width: 100%; height: 100%;">
+                <img src="pfpLogo.png" class="aboutBack">
+            </div>
+            
         </section>
         <section id="everythingwithin">
             <section id="stuff">
