--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RngValue</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body onscroll="myFunction()">
-    <div id="navbarHitBox" style="position:absolute; top:100vh;"></div>
+<body>
     <div class="navbar">
         <div class="navbarBack">
             <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
@@ -32,10 +31,9 @@
     
     <section id="everything" style="position: relative; top: .05px;">
         <section id="about">
-            <div style="margin: 0px; display: flex; position: absolute; justify-content: center; align-content: center; width: 100%; height: 100%;">
+            <div style="overflow-x: hidden; margin: 0px; display: flex; position: absolute; justify-content: center; align-content: center; width: 100%; height: 100%;">
                 <img src="pfpLogo.png" class="aboutBack">
             </div>
-            
         </section>
         <section id="everythingwithin">
             <section id="stuff">
@@ -113,5 +111,8 @@
 
 <script src="index.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
 
 </html>
