--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="backgroundelementbecausefuckmylife"></div>
     <div class="navbar">
         <div class="navbarBack">
             <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></a>
@@ -29,7 +30,7 @@
     </section>
     <img src="forground.png" class="ground" draggable="false">
     
-    <section id="everything" style="position: relative; top: .05px;">
+    <section id="everything" style="position: relative; top: .09px;">
         <section id="about">
             <div style="overflow-x: hidden; margin: 0px; display: flex; position: absolute; justify-content: center; align-content: center; width: 100%; height: 100%;">
                 <img src="pfpLogo.png" class="aboutBack">
