--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </div>
         <div class="navbar">
             <div class="navbarBack">
-                <a href="#about"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
-                        onmouseout="this.src='aboutBtnInact.png'"></a>
-                <a href="#stuff"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
-                        onmouseout="this.src='aboutBtnInact.png'"></a>
-                <a href="#projects"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
-                        onmouseout="this.src='aboutBtnInact.png'"></a>
-                <a href="#socials"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
-                        onmouseout="this.src='aboutBtnInact.png'"></a>
+                <btn onclick="scrollToThe('#about')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
+                        onmouseout="this.src='aboutBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#stuff')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
+                        onmouseout="this.src='aboutBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#projects')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
+                        onmouseout="this.src='aboutBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#socials')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
+                        onmouseout="this.src='aboutBtnInact.png'"></btn>
             </div>
-            <a class="backToTopBtn" href="#title"><img src="backtotopBtnInact.png"
-                    onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></a>
+            <btn class="backToTopBtn" onclick="scrollToThe('#title')"><img src="backtotopBtnInact.png"
+                    onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></btn>
         </div>
 
         <section id="title">
