--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="wrapper">
         <div class="backgroundelementbecausefuckmylife"></div>
-        <div class="titlelogo">
+        <div id="ehmtitle" class="titlelogo">
             <img src="Logo.png" draggable="false">
         </div>
         <div class="navbar">
@@ -27,7 +27,7 @@
                 <btn onclick="scrollToThe('#socials')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
                         onmouseout="this.src='aboutBtnInact.png'"></btn>
             </div>
-            <btn class="backToTopBtn" onclick="scrollToThe('#title')"><img src="backtotopBtnInact.png"
+            <btn class="backToTopBtn" onclick="scrollToThe('#ehmtitle')"><img src="backtotopBtnInact.png"
                     onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></btn>
         </div>
 
