--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         onmouseout="this.src='aboutBtnInact.png'"></btn>
                 <btn onclick="scrollToThe('#stuff')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
                         onmouseout="this.src='aboutBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#projects')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
-                        onmouseout="this.src='aboutBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#socials')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
-                        onmouseout="this.src='aboutBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#projects')"><img src="aboutBtnInact.png"
+                        onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#socials')"><img src="aboutBtnInact.png"
+                        onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></btn>
             </div>
             <btn class="backToTopBtn" onclick="scrollToThe('#ehmtitle')"><img src="backtotopBtnInact.png"
                     onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></btn>
@@ -41,10 +41,12 @@
 
         <section id="everything" style="position: relative; bottom: -.09px;">
             <section id="about">
-                <div
-                    style="overflow-x: hidden; margin: 0px; display: flex; position: absolute; justify-content: center; align-content: center; width: 100%; height: 100%;">
-                    <img src="pfpLogo.png" class="aboutBack">
-                </div>
+                <h1>Imagine...</h1>
+                <iframe class="aboutVideo" src="https://www.youtube.com/embed/ULrxa1KVzZU"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <p>naming yourself "RngValue" and basing your entire personality around tophats...</p>
             </section>
             <section id="everythingwithin">
                 <section id="stuff">
