simplified/fixed a bud

--- a/index.html
+++ b/index.html
@@ -39,16 +39,42 @@
         <div class="ground"></div>
         <!--<img src="forground.png" class="ground" draggable="false">-->
 
-        <section id="everything" style="position: relative; bottom: -.09px;">
-            <section id="about">
-                <h1>Imagine...</h1>
-                <iframe class="aboutVideo" src="https://www.youtube.com/embed/ULrxa1KVzZU"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-                <p>naming yourself "RngValue" and basing your entire personality around tophats...</p>
-            </section>
+        <section id="everything">
             <section id="everythingwithin">
+                <section id="about">
+                    <h1>Imagine...</h1>
+                    <iframe class="aboutVideo" src="https://www.youtube.com/embed/ULrxa1KVzZU"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                    <p>naming yourself "RngValue" and basing your entire personality around tophats...</p>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci doloribus beatae quia incidunt
+                        aperiam! Assumenda pariatur accusantium voluptatibus quibusdam impedit ullam ut eaque quas
+                        blanditiis. Cumque veniam voluptas, quisquam et ducimus doloremque ab architecto, repellat iste
+                        beatae ullam neque velit iusto qui accusamus tenetur perferendis iure eius! Aliquam
+                        exercitationem unde ipsa quasi rerum dolorem ea, atque deserunt libero a dolore fugit vitae.
+                        Neque eveniet consequatur nam laboriosam earum ratione molestiae. Voluptatibus, obcaecati! Autem
+                        rem, soluta deserunt repellat ad temporibus nemo fugiat cupiditate explicabo odit reiciendis,
+                        quis necessitatibus aliquid officiis ut consectetur nobis dicta dolor iste aperiam voluptate
+                        quam ullam! Doloremque est, repudiandae rem ad fugit dolorum ex architecto qui nesciunt maxime
+                        amet optio accusantium quam quae, iure in dolore rerum blanditiis a mollitia ut quas laborum.
+                        Ducimus numquam velit aliquam libero sunt nam! Aliquid magnam ipsa ipsam. Incidunt esse magni
+                        tempora error natus laboriosam magnam nesciunt quisquam voluptatibus cupiditate doloremque ex,
+                        velit eum autem sint dicta qui itaque corrupti. Quos, placeat ipsa! Illum, harum sunt maxime
+                        quibusdam eaque quo, nihil asperiores veritatis quod voluptates voluptatum provident ea, fugiat
+                        perferendis totam vero rem dolorem ad architecto sint officiis eos reiciendis velit corporis?
+                        Facilis tenetur voluptatum ullam? Facilis, labore. Minus nihil repellendus, voluptate ad
+                        deserunt repellat rerum ipsa corrupti veniam quod labore ullam libero? Sed rerum quis dicta,
+                        dignissimos perspiciatis provident non distinctio nam minus, amet deserunt repellat a maiores
+                        fugit? Eveniet blanditiis pariatur tempora autem ratione, quaerat dolorem nisi inventore minus.
+                        Cupiditate, cumque aliquid qui doloremque veniam commodi. Quaerat fuga animi odio nihil.
+                        Repellendus obcaecati cumque eligendi molestias magnam porro distinctio est, possimus quod
+                        necessitatibus dolorum reprehenderit esse minima neque iusto accusantium? Eaque tenetur
+                        consectetur, dolore unde doloribus obcaecati, officia maiores molestiae sit animi amet beatae
+                        earum odio rem vel? Facere nisi accusantium alias impedit commodi porro in distinctio ipsum
+                        iusto.</p>
+                </section>
                 <section id="stuff">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus
                         nihil
