--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                     <p>Imagine naming yourself "<span class="gradientText"><strong>RngValue</strong></span>" and letting your entire personality be based around <span class="gradientText"><strong>tophats</strong></span>...</p>
-                    <p>can't be me.</p>
+                    <p><i>can't be me.</i></p>
                     <br>
                     <p>Anyways, hello there! I call myself <span class="gradientText"><strong>RngValue</strong></span> and am addicted to <span class="gradientText"><strong>tophats</strong></span>!</p>
                     <p></p>
