pixelart lets goooooo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RngValue</title>
+    <meta name="description" content="I am RngValue, a solo gamedev and a pixelartist. This website is supposed to be my portfolio, but I treat it more like an archive of my games and drawings.">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -20,12 +21,12 @@
             <div class="navbarBack">
                 <btn onclick="scrollToThe('#about')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
                         onmouseout="this.src='aboutBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#stuff')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
-                        onmouseout="this.src='aboutBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#projects')"><img src="aboutBtnInact.png"
-                        onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#socials')"><img src="aboutBtnInact.png"
-                        onmouseover="this.src='aboutBtn.png'" onmouseout="this.src='aboutBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#games')"><img src="gamesBtnInact.png" onmouseover="this.src='gamesBtn.png'"
+                        onmouseout="this.src='gamesBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#art')"><img src="artBtnInact.png"
+                        onmouseover="this.src='artBtn.png'" onmouseout="this.src='artBtnInact.png'"></btn>
+                <btn onclick="scrollToThe('#socials')"><img src="socialsBtnInact.png"
+                        onmouseover="this.src='socialsBtn.png'" onmouseout="this.src='socialsBtnInact.png'"></btn>
             </div>
             <btn class="backToTopBtn" onclick="scrollToThe('#ehmtitle')"><img src="backtotopBtnInact.png"
                     onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></btn>
@@ -53,7 +54,7 @@
                     <p>Anyways, hello there! I call myself <span class="gradientText"><strong>RngValue</strong></span> and am addicted to <span class="gradientText"><strong>tophats</strong></span>!</p>
                     <p></p>
                 </section>
-                <section id="stuff">
+                <section id="games">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus
                         nihil
                         consectetur
@@ -84,7 +85,7 @@
                         officiis
                         neque nulla totam ab voluptatem, sit accusantium,</p>
                 </section>
-                <section id="projects" class="general">
+                <section id="art" class="general">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni ab sequi animi ea voluptatibus
                         nihil
                         consectetur
