--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </div>
         <div class="navbar">
             <div class="navbarBack">
-                <btn onclick="scrollToThe('#about')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
+                <btn title="About" onclick="scrollToThe('#about')"><img src="aboutBtnInact.png" onmouseover="this.src='aboutBtn.png'"
                         onmouseout="this.src='aboutBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#games')"><img src="gamesBtnInact.png" onmouseover="this.src='gamesBtn.png'"
+                <btn title="Games" onclick="scrollToThe('#games')"><img src="gamesBtnInact.png" onmouseover="this.src='gamesBtn.png'"
                         onmouseout="this.src='gamesBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#art')"><img src="artBtnInact.png"
+                <btn title="Art" onclick="scrollToThe('#art')"><img src="artBtnInact.png"
                         onmouseover="this.src='artBtn.png'" onmouseout="this.src='artBtnInact.png'"></btn>
-                <btn onclick="scrollToThe('#socials')"><img src="socialsBtnInact.png"
+                <btn title="Socials" onclick="scrollToThe('#socials')"><img src="socialsBtnInact.png"
                         onmouseover="this.src='socialsBtn.png'" onmouseout="this.src='socialsBtnInact.png'"></btn>
             </div>
             <btn class="backToTopBtn" onclick="scrollToThe('#ehmtitle')"><img src="backtotopBtnInact.png"
