--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <btn title="Socials" onclick="scrollToThe('#socials')"><img src="socialsBtnInact.png"
                         onmouseover="this.src='socialsBtn.png'" onmouseout="this.src='socialsBtnInact.png'"></btn>
             </div>
-            <btn class="backToTopBtn" onclick="scrollToThe('#ehmtitle')"><img src="backtotopBtnInact.png"
+            <btn title="Go Back" class="backToTopBtn" onclick="scrollToThe('#ehmtitle')"><img src="backtotopBtnInact.png"
                     onmouseover="this.src='backtotopBtn.png'" onmouseout="this.src='backtotopBtnInact.png'"></btn>
         </div>
 
